--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "firebase": "^11.0.2",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "joi": "^17.13.3",
